@@ -23,23 +23,23 @@ import com.karankumar.bookproject.backend.entity.Author;
 import com.karankumar.bookproject.backend.entity.Book;
 import com.karankumar.bookproject.backend.entity.BookGenre;
 import com.karankumar.bookproject.backend.entity.BookFormat;
-import com.karankumar.bookproject.backend.entity.CustomShelf;	
-import com.karankumar.bookproject.backend.entity.PredefinedShelf;	
+import com.karankumar.bookproject.backend.entity.CustomShelf;
+import com.karankumar.bookproject.backend.entity.PredefinedShelf;
 import com.karankumar.bookproject.backend.entity.RatingScale;
 import org.apache.commons.io.FileUtils;
 
 import static com.karankumar.bookproject.backend.entity.PredefinedShelf.ShelfName.TO_READ;
 
-import org.assertj.core.api.SoftAssertions;
 import org.json.JSONException;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assumptions.assumeThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
+
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -49,6 +49,8 @@ import org.springframework.transaction.annotation.Transactional;
 import java.io.File;
 import java.io.IOException;
 import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -61,9 +63,8 @@ class BookServiceTest {
     private final TagService tagService;
     private final PredefinedShelfService predefinedShelfService;
 
-    private Book validBook;
     private PredefinedShelf toRead;
-    private Author author;
+    private final Author author = new Author("Test First Name", "Test Last Name");
 
     @Autowired
     BookServiceTest(AuthorService authorService, BookService bookService,
@@ -77,22 +78,22 @@ class BookServiceTest {
     }
 
     @BeforeEach
-    public void setup() {
+    public void setUp() {
         resetServices();
-        resetAuthorAndBook();
+        toRead = predefinedShelfService.findByPredefinedShelfNameAndLoggedInUser(TO_READ);
     }
 
-    private void resetAuthorAndBook() {
-        toRead = predefinedShelfService.findByPredefinedShelfNameAndLoggedInUser(TO_READ);
-        author = new Author("Test First Name", "Test Last Name");
-        validBook = new Book("Book Name", author, toRead);
+    private Book.BookBuilder validBook() {
+        return Book.builder()
+                   .title("Book Name")
+                   .author(author)
+                   .predefinedShelf(toRead);
     }
 
     private void resetServices() {
         bookService.deleteAll();
         authorService.deleteAll();
         customShelfService.deleteAll();
-        tagService.deleteAll();
     }
 
     @Test
@@ -104,45 +105,33 @@ class BookServiceTest {
 
     @Test
     void notSaveBookWithoutAuthor() {
-        SoftAssertions softly = new SoftAssertions();
+        // given
+        Book bookWithoutAuthor = validBook().author(null)
+                                            .build();
 
         // when
-        bookService.save(new Book("Book without author", null, toRead));
+        bookService.save(bookWithoutAuthor);
 
         // then
-        softly.assertThat(authorService.count()).isZero();
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(authorService.count()).isZero();
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
+    @DisplayName("not save a book that exceeds the max number of pages allowed")
     void notSaveBookWithMaxNumberOfPagesExceeded() {
-        SoftAssertions softly = new SoftAssertions();
-
         // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setNumberOfPages(Book.MAX_PAGES + 1);
+        Book book = validBook().pagesRead(Book.MAX_PAGES + 1)
+                               .build();
 
         // when and then
-        softly.assertThatThrownBy(() -> bookService.save(book))
-              .isInstanceOf(TransactionSystemException.class);
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
-    }
-
-    @Test
-    void notSaveBookOutsidePageLimit() {
-        SoftAssertions softly = new SoftAssertions();
-
-        // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setPagesRead(Book.MAX_PAGES + 1);
-
-        // when and then
-        softly.assertThatThrownBy(() -> bookService.save(book))
-              .isInstanceOf(TransactionSystemException.class);
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThatThrownBy(() -> bookService.save(book))
+                  .isInstanceOf(TransactionSystemException.class);
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
@@ -155,9 +144,9 @@ class BookServiceTest {
     @Test
     void saveBookWithinPageLimit() {
         // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setPagesRead(Book.MAX_PAGES);
-        book.setNumberOfPages(Book.MAX_PAGES);
+        Book book = validBook().pagesRead(Book.MAX_PAGES)
+                               .numberOfPages(Book.MAX_PAGES)
+                               .build();
 
         // when
         bookService.save(book);
@@ -168,26 +157,25 @@ class BookServiceTest {
 
     @Test
     void notSaveBookWithoutPredefinedShelf() {
-        SoftAssertions softly = new SoftAssertions();
-
         // given
-        Book bookWithoutShelf = new Book("Title", new Author("First", "Last"), null);
+        Book bookWithoutShelf = validBook().predefinedShelf(null)
+                                           .build();
 
         // when
         bookService.save(bookWithoutShelf);
 
         // then
-        softly.assertThat(authorService.count()).isZero();
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(authorService.count()).isZero();
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
     void saveValidBook() {
-        SoftAssertions softly = new SoftAssertions();
-
         // given
-        assertThat(bookService.count()).isZero();
+        assumeThat(bookService.count()).isZero();
+        Book validBook = validBook().build();
 
         // when
         bookService.save(validBook);
@@ -195,27 +183,50 @@ class BookServiceTest {
         // then
         List<Book> filteredByTitle = bookService.findAll(validBook.getTitle());
 
-        softly.assertThat(bookService.count()).isOne();
-        softly.assertThat(bookService.findAll(validBook.getTitle()).size()).isOne();
-        softly.assertThat(filteredByTitle).first().isEqualTo(validBook);
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(bookService.count()).isOne();
+            softly.assertThat(bookService.findAll(validBook.getTitle()).size()).isOne();
+            softly.assertThat(filteredByTitle).first().isEqualTo(validBook);
+        });
     }
 
     @Test
     void returnAllBooksWhenFilterIsEmpty() {
-        assertEquals(bookService.findAll(), bookService.findAll(""));
+        // given
+        assumeThat(bookService.count()).isZero();
+        Book book1 = validBook().build();
+        bookService.save(book1);
+        Book book2 = validBook().build();
+        bookService.save(book2);
+
+        // when
+        List<Book> actual = bookService.findAll("");
+
+        // then
+        assertThat(actual).hasSize(2);
     }
 
     @Test
     void returnAllBooksWhenFilterIsNull() {
-        assertEquals(bookService.findAll(), bookService.findAll(null));
+        // given
+        assumeThat(bookService.count()).isZero();
+        Book book1 = validBook().build();
+        bookService.save(book1);
+        Book book2 = validBook().build();
+        bookService.save(book2);
+
+        // when
+        List<Book> actual = bookService.findAll(null);
+
+        // then
+        assertThat(actual).hasSize(2);
     }
 
     @Test
-    void shouldCreateJsonRepresentationForBooks() throws IOException, JSONException {
+    void createJsonRepresentationForBooks() throws IOException, JSONException {
         // given
-        Book anotherValidBook = createBookAndSetAllAttributes();
-        bookService.save(validBook);
+        bookService.save(validBook().build());
+        Book anotherValidBook = createBookWithAllAttributes().build();
         bookService.save(anotherValidBook);
 
         String expectedJsonString = FileUtils.readFileToString(
@@ -225,47 +236,55 @@ class BookServiceTest {
         String actualJsonString = bookService.getJsonRepresentationForBooksAsString();
 
         // then
-        JSONAssert.assertEquals(expectedJsonString, actualJsonString, JSONCompareMode.NON_EXTENSIBLE);
+        JSONAssert.assertEquals(
+                expectedJsonString, actualJsonString, JSONCompareMode.NON_EXTENSIBLE
+        );
     }
 
     @Test
     @Transactional
     void findSavedBook() {
-        Book bookToSave = new Book("Book Name To Save", author, toRead);
+        // given
+        Book bookToSave = validBook().build();
+
+        // when
         bookService.save(bookToSave);
-        assertEquals(bookService.findById(bookToSave.getId()),bookToSave);
+
+        // then
+        assertThat(bookService.findById(bookToSave.getId())).isEqualTo(bookToSave);
     }
 
-    private Book createBookAndSetAllAttributes() {
+    private Book.BookBuilder createBookWithAllAttributes() {
+        return validBook()
+                .title("Another Book Name")
+                .numberOfPages(420)
+                .pagesRead(42)
+                .bookGenre(BookGenre.ADVENTURE)
+                .bookFormat(BookFormat.PAPERBACK)
+                .seriesPosition(3)
+                .edition(2)
+                .bookRecommendedBy("Peter Parker")
+                .isbn("9780151010264")
+                .yearOfPublication(2014)
+                .customShelf(createAndSaveCustomShelf())
+                .tags(createAndSaveTags())
+                .rating(RatingScale.EIGHT)
+                .dateStartedReading(LocalDate.of(2020, 7, 5))
+                .dateFinishedReading(LocalDate.of(2020, 9, 5))
+                .bookReview("Very good.");
+    }
+
+    private CustomShelf createAndSaveCustomShelf() {
         CustomShelf customShelf = customShelfService.createCustomShelf("My Shelf");
         customShelfService.save(customShelf);
+        return customShelf;
+    }
 
+    private Set<Tag> createAndSaveTags() {
         Tag tag1 = new Tag("book");
         Tag tag2 = new Tag("adventure");
         tagService.save(tag1);
         tagService.save(tag2);
-
-        Book book = new Book("Another Book Name", author, toRead);
-        book.setNumberOfPages(420);
-        book.setPagesRead(42);
-        book.setBookGenre(BookGenre.ADVENTURE);
-        book.setBookFormat(BookFormat.PAPERBACK);
-        book.setSeriesPosition(3);
-        book.setEdition(2);
-        book.setBookRecommendedBy("Peter Parker");
-        book.setIsbn("9780151010264");
-        book.setPublicationYear(2014);
-        book.setCustomShelf(customShelf);
-        book.setTags(Set.of(tag1, tag2));
-        book.setRating(RatingScale.EIGHT);
-        book.setDateStartedReading(LocalDate.of(2020, 7, 5));
-        book.setDateFinishedReading(LocalDate.of(2020, 9, 5));
-        book.setBookReview("Very good.");
-        return book;
-    }
-
-    @AfterEach
-    void deleteBooks() {
-        bookService.deleteAll();
+        return new HashSet<>(Arrays.asList(tag1, tag2));
     }
 }
